<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EyeCanControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, TCPsoketTest!</string>
	
    
    <string name="bulb">전구</string>
    <string name="fan">선풍기</string>
    <string name="window">창문</string>
    <string name="bed">침대</string>
    <string name="container">소변통</string>
    <string name="diary">간호일지</string>
    <string name="empty">소변통이 비었습니다.</string>
    <string name="full">소변통이 가득찼습니다.\n소변통을 비워주세요.</string>
    <string name="notfull">소변통이 비어있습니다.</string>
    <string name="eyecancontrol">EyeCanControl</string>
    <string name="today">오늘</string>
  	<string name="plus">+</string>
    
</resources>
