<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.eyecancontrol.EyeCanControl" 
    android:background="#ffffff"
    >

    <TextView
        android:id="@+id/containerTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/container"
        android:textSize="40sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <ImageView
        android:id="@+id/urineContainerImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="50sp"
        android:contentDescription="@string/app_name" />
    
    <TextView 
        android:id="@+id/containerTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/full"
        android:textSize="20sp"
        android:textColor="#FF0000"/>



</LinearLayout>
